@@ -5,18 +5,18 @@ import java.util.List;
 
 /**
  * Given an array of distinct integers candidates and a target integer target, return a list of all unique combinations of candidates where the chosen numbers sum to target. You may return the combinations in any order.
- *
+ * <p>
  * The same number may be chosen from candidates an unlimited number of times. Two combinations are unique if the
  * frequency
- *  of at least one of the chosen numbers is different.
- *
+ * of at least one of the chosen numbers is different.
+ * <p>
  * The test cases are generated such that the number of unique combinations that sum up to target is less than 150 combinations for the given input.
- *
- *
- *
- *
+ * <p>
+ * <p>
+ * <p>
+ * <p>
  * Example 1:
- *
+ * <p>
  * Input: candidates = [2,3,6,7], target = 7
  * Output: [[2,2,3],[7]]
  * Explanation:
@@ -24,28 +24,31 @@ import java.util.List;
  * 7 is a candidate, and 7 = 7.
  * These are the only two combinations.
  * Example 2:
- *
+ * <p>
  * Input: candidates = [2,3,5], target = 8
  * Output: [[2,2,2,2],[2,3,3],[3,5]]
  * Example 3:
- *
+ * <p>
  * Input: candidates = [2], target = 1
  * Output: []
- *
- *
+ * <p>
+ * <p>
  * Constraints:
- *
+ * <p>
  * 1 <= candidates.length <= 30
  * 2 <= candidates[i] <= 40
  * All elements of candidates are distinct.
  * 1 <= target <= 40
  */
 public class CombinationSum {
-    public static void main(String[] args) {
-        System.out.println(new CombinationSum().find(new int[]{2,3,6,7}, 7));
-        System.out.println(new CombinationSum().find(new int[]{2,3,5}, 8));
-        System.out.println(new CombinationSum().find(new int[]{2}, 1));
-    }
+
+    /**
+     * Finds out all the possible combinations based on given target
+     *
+     * @param candidate number array out of which combinations are to be made
+     * @param target    combinations sum total should be equal to target
+     * @return @{@link List} List of all the possible combinations
+     */
     public List<List<Integer>> find(int[] candidate, int target) {
         List<List<Integer>> possibleCombinations = new ArrayList<>();
         List<Integer> combination = new ArrayList<>();
@@ -53,6 +56,15 @@ public class CombinationSum {
         return possibleCombinations;
     }
 
+    /**
+     * recursive function to find out all combination
+     *
+     * @param candidate            number array out of which combinations are to be made
+     * @param index                index of the element we are considering
+     * @param remainingSum         remaining sum after subtracting all the element in current iteration
+     * @param combination          present combination we are iterating upon
+     * @param possibleCombinations all the possible combinations
+     */
     private void find(int[] candidate, int index, int remainingSum, List<Integer> combination, List<List<Integer>> possibleCombinations) {
         if (remainingSum == 0) {
             possibleCombinations.add(new ArrayList<>(combination));
@@ -65,8 +77,8 @@ public class CombinationSum {
 
         int num = candidate[index];
         combination.add(num);
-        find(candidate, index, remainingSum-num, combination, possibleCombinations);
-        combination.remove(combination.size() - 1);
-        find(candidate, index+1, remainingSum, combination, possibleCombinations);
+        find(candidate, index, remainingSum - num, combination, possibleCombinations);
+        combination.removeLast();
+        find(candidate, index + 1, remainingSum, combination, possibleCombinations);
     }
 }
